# CNNHandwritingProject

./: CMakeLists.txt  README.md
include/layers/: conv2d.hpp  dense.hpp  flatten.hpp  maxpool2x2.hpp  relu.hpp  softmax.hpp
include/utils/: mnist_io.hpp  sampler.hpp
src/: model.hpp  train.cpp
